[project]
name = "latest_earth_quake_Indonesia_chatur"
version = "0.0.2"
authors = [
  { name="Chatur Agus Priyono", email="chatur.agus.priyono@gmail.com" },
]
description = "This package will get the latest earthquake (Indonesia) from https://www.bmkg.go.id/ BMKG"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chaturap/bmkg-latest-earthquake"
"Bug Tracker" = "https://github.com/chaturap/bmkg-latest-earthquake/issues"